# codex-approval-guard

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: architecture.md  release-notes-draft.md
scripts/: build-release-body.mjs  build-tauri.mjs  prepare-release.mjs  validate-release.mjs  with-crates-proxy.mjs
src/: App.tsx  backend.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/fixtures/ui_text/: browser_permission.txt  codex_desktop_chinese_apply_changes.txt  codex_desktop_chinese_pending_approval.txt  codex_desktop_japanese_apply_changes.txt  codex_npm_test.txt  codex_workspace_write.txt  file_explorer_repo_window.txt  generic_approval.txt  guard_self_unresponsive.txt  uac_yes_no.txt
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  circuit.rs  lib.rs  main.rs  policy.rs  update.rs
src-tauri/src/platform/: macos.rs  matchers.rs  mod.rs  parser.rs  windows.rs
