[package]
name = "codex-approval-guard"
version = "0.1.2"
description = "Scoped Codex approval assistant"
authors = ["engchina"]
edition = "2021"
license = "MIT"

[lib]
name = "codex_approval_guard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
semver = "1"

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = "0.24.4"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
