[package]
name = "codex-approval-guard"
version = "0.1.11"
description = "Scoped Codex approval assistant"
authors = ["engchina"]
edition = "2021"
license = "MIT"

[lib]
name = "codex_approval_guard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
semver = "1"

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = "0.24.4"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
# 単一インスタンス強制（policy.json の read-modify-write 競合と、複数インスタンスが
# 同時に UI Automation でクリックを取り合う事故を防ぐ）。Windows/macOS のみ対応。
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# 単一インスタンス強制（Windows と同じ意図）。
tauri-plugin-single-instance = "2"
# macOS Accessibility API への FFI。AXUIElement / AXObserver / kAX* 定数を提供。
accessibility-sys = "0.1"
core-foundation = "0.10"
core-foundation-sys = "0.8"
# Objective-C ランタイム経由で NSWorkspace.runningApplications を取得し、Codex bundle identifier
# を持つプロセスを列挙する。AXUIElementCreateApplication(pid) と組み合わせて AX ツリーへ橋渡し。
objc2 = "0.6"
# `NSEnumerator` を有効化しないと `NSArray::iter()` が消える。runningApplications を
# for ループで回すために必須。NSArray / NSString は objc2-app-kit の NSWorkspace /
# NSRunningApplication により transitive に有効化されるが、NSEnumerator は誰も入れて
# くれないので明示する。
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSEnumerator", "NSString"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSWorkspace", "NSRunningApplication", "libc"] }
